src/test/ui/suggestions/suggest-both-imm-and-mut-trait-implementation.stderr
error[E0277]: the trait bound `S: Trait` is not satisfied
  --> $DIR/suggest-both-imm-and-mut-trait-implementation.rs:12:9
   |
LL |     foo(s);
   |     --- ^ expected an implementor of trait `Trait`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/suggest-both-imm-and-mut-trait-implementation.rs:8:11
   |
LL | fn foo<X: Trait>(_: X) {}
   |           ^^^^^ required by this bound in `foo`
help: consider borrowing here
   |
LL |     foo(&s);
   |         +
LL |     foo(&mut s);
   |         ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
